--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 # Feiieei.github.io
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+	</head>
+	<body>
+		<p>
+			Hello world!
+		</p>
+	</body>
+</html>
